# logfine

./: .gitignore  Cargo.toml  README.md  flowchart.md
migrations/00000000000000_create_tables/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
